tests/fixtures/invalid/defectSectionLevelJump.yini
^^ Logging        // INVALID: section level jumps without parent
enabled = true
